fixed spacing issue

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -58,6 +58,10 @@
     position: absolute;
 }
 
+.amenities .popover {
+    margin-left: -5px;
+}
+
 .city {
     padding-left: 10%;
     position: relative;
